Closed Bug 1341582 Opened 9 years ago Closed 9 years ago

Form autofill popup won't apply to an auto-focused input until it's refocused

Categories

(Toolkit :: Form Manager, defect)

defect
Not set
normal

Tracking

()

RESOLVED FIXED
mozilla54
Tracking Status
firefox54 --- fixed

People

(Reporter: lchang, Assigned: lchang)

References

(Blocks 1 open bug)

Details

(Whiteboard: [form autofill:M1])

Attachments

(1 file)

The form autofill popup won't appear on an input which is auto-focused by the website.
The root cause of this bug is the same as bug 1311301 so I applied its approach in our "MarkAsAutofillField". It works except that the page is loaded in a new tab first time. That's because "AutofillProfileAutoCompleteSearch" hasn't finished registering when we call "MaybeStartControllingInput" in "MarkAsAutofillField". Therefore, "form-history" will be used alternatively. In this patch I changed the loader of "FormAutofillContent.jsm" back to "Cu.import" to initialize it in the beginning. I also removed the "_" prefix of "_identifyAutofillFields" to explicitly describe it as a public method. Hi Matt, Could you take a look? Thanks.
Comment on attachment 8840387 [details] Bug 1341582 - Apply form autofill to an already-focused input, https://reviewboard.mozilla.org/r/114906/#review116650 Thanks
Attachment #8840387 - Flags: review?(MattN+bmo) → review+
Matt, Thanks for the review.
Keywords: checkin-needed
Pushed by ryanvm@gmail.com: https://hg.mozilla.org/integration/autoland/rev/0fac3630e21b Apply form autofill to an already-focused input, r=MattN
Keywords: checkin-needed
Status: ASSIGNED → RESOLVED
Closed: 9 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla54
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: