Bug 1341582 - Apply form autofill to an already-focused input, r=MattN

MozReview-Commit-ID: C6zT7jKBb4c

--HG--
extra : rebase_source : 1154380e8b4a0c3be5443ac8044febe096f550ff